--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
        "4       Manual      0          6  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "4       Manual      0          6  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,25 +748,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    290\n",
-       "1     10\n",
-       "3      1\n",
-       "Name: Owner, dtype: int64"
+       "Index(['Selling_Price', 'Present_Price', 'Kms_Driven', 'Fuel_Type',\n",
+       "       'Seller_Type', 'Transmission', 'Owner', 'Years old'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_df['Owner'].value_counts()"
+    "final_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Selling_Price</th>\n",
+       "      <th>Present_Price</th>\n",
+       "      <th>Kms_Driven</th>\n",
+       "      <th>Owner</th>\n",
+       "      <th>Years old</th>\n",
+       "      <th>Fuel_Type_Diesel</th>\n",
+       "      <th>Fuel_Type_Petrol</th>\n",
+       "      <th>Seller_Type_Individual</th>\n",
+       "      <th>Transmission_Manual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>301.000000</td>\n",
+       "      <td>301.000000</td>\n",
+       "      <td>301.000000</td>\n",
+       "      <td>301.000000</td>\n",
+       "      <td>301.000000</td>\n",
+       "      <td>301.000000</td>\n",
+       "      <td>301.000000</td>\n",
+       "      <td>301.000000</td>\n",
+       "      <td>301.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.661296</td>\n",
+       "      <td>7.628472</td>\n",
+       "      <td>36947.205980</td>\n",
+       "      <td>0.043189</td>\n",
+       "      <td>6.372093</td>\n",
+       "      <td>0.199336</td>\n",
+       "      <td>0.794020</td>\n",
+       "      <td>0.352159</td>\n",
+       "      <td>0.867110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.082812</td>\n",
+       "      <td>8.644115</td>\n",
+       "      <td>38886.883882</td>\n",
+       "      <td>0.247915</td>\n",
+       "      <td>2.891554</td>\n",
+       "      <td>0.400166</td>\n",
+       "      <td>0.405089</td>\n",
+       "      <td>0.478439</td>\n",
+       "      <td>0.340021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.320000</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>1.200000</td>\n",
+       "      <td>15000.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.600000</td>\n",
+       "      <td>6.400000</td>\n",
+       "      <td>32000.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>9.900000</td>\n",
+       "      <td>48767.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>92.600000</td>\n",
+       "      <td>500000.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Selling_Price  Present_Price     Kms_Driven       Owner   Years old  \\\n",
+       "count     301.000000     301.000000     301.000000  301.000000  301.000000   \n",
+       "mean        4.661296       7.628472   36947.205980    0.043189    6.372093   \n",
+       "std         5.082812       8.644115   38886.883882    0.247915    2.891554   \n",
+       "min         0.100000       0.320000     500.000000    0.000000    2.000000   \n",
+       "25%         0.900000       1.200000   15000.000000    0.000000    4.000000   \n",
+       "50%         3.600000       6.400000   32000.000000    0.000000    6.000000   \n",
+       "75%         6.000000       9.900000   48767.000000    0.000000    8.000000   \n",
+       "max        35.000000      92.600000  500000.000000    3.000000   17.000000   \n",
+       "\n",
+       "       Fuel_Type_Diesel  Fuel_Type_Petrol  Seller_Type_Individual  \\\n",
+       "count        301.000000        301.000000              301.000000   \n",
+       "mean           0.199336          0.794020                0.352159   \n",
+       "std            0.400166          0.405089                0.478439   \n",
+       "min            0.000000          0.000000                0.000000   \n",
+       "25%            0.000000          1.000000                0.000000   \n",
+       "50%            0.000000          1.000000                0.000000   \n",
+       "75%            0.000000          1.000000                1.000000   \n",
+       "max            1.000000          1.000000                1.000000   \n",
+       "\n",
+       "       Transmission_Manual  \n",
+       "count           301.000000  \n",
+       "mean              0.867110  \n",
+       "std               0.340021  \n",
+       "min               0.000000  \n",
+       "25%               1.000000  \n",
+       "50%               1.000000  \n",
+       "75%               1.000000  \n",
+       "max               1.000000  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.describe()"
    ]
   },
   {
